# HGT-BioGuard

./: .gitignore  README.md  clean.ipynb  diagrams.py  export_graph_to_json.py  graphdata.ipynb  hgt-genomes-flights.ipynb  pyproject.toml
data analysis/: flight.ipynb  flight_dashboard.py  genome.ipynb
visualization/: graph_data_viz.json  graph_explorer.html  simulation.html  start_server.sh  visualization.js
