[project]
name = "gnn"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch>=2.9.0,<3.0.0",
    "torchvision>=0.24.0,<0.25.0",
    "torchaudio>=2.9.0,<3.0.0",
    "torch-geometric>=2.7.0,<3.0.0",
    "matplotlib>=3.10.7,<4.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "ipykernel >=7.1.0,<8.0.0",
    "certifi >=2025.10.5,<2026.0.0",
    "biopython>=1.84,<2.0.0",
    "pandas",
    "zstandard>=0.23.0,<1.0.0",
    "geopy",
    "matplotlib",
    "seaborn"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
